--- a/ScienceCafe/app/src/main/res/layout/fragment_event_list.xml
+++ b/ScienceCafe/app/src/main/res/layout/fragment_event_list.xml
@@ -36,6 +36,30 @@ tools:context=".EventList">
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/reward_button"
         app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:text="@string/event_list"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reward_button" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/EventListP"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+
+            tools:listitem="@layout/list_item_eventp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
